# BorialisOS

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  start.sh  test.sh  test2.sh
buildenv/: Dockerfile
config/: grub.cfg
config/isodir/boot/grub/: grub.cfg
include/gdt/: gdt.h  tss.h
include/shell/: shell.h
include/utils/: memory.h  string.h  types.h
include/video/: vga.h
kernel/: Makefile
kernel/include/interrupts/: idt.h
kernel/include/shell/: shell.h
kernel/include/utils/: memory.h  string.h  types.h  utils.h
kernel/include/video/: vga.h
kernel/src/: boot.s  boot64.s  main.c  main.cpp
kernel/src/interrupts/: idt.c  interrupts.s  isr.s
src/: kernel.cpp
src/gdt/: gdt.cpp
src/video/: vga.cpp
